--- a/admin-site/docker-compose.yml
+++ b/admin-site/docker-compose.yml
@@ -10,7 +10,23 @@ services:
         - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
-
+    volumes:
+      - ${DEFAULT_DATA_DIR}/mysql_data:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/mysq/my.cnf
+  redis:
+    image: "redis:alpine"
+    environment:
+      - REDIS_REPLICATION_MODE=master
+    volumes:
+    - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+    - ./redis/data:/data
+    sysctls:
+      - net.core.somaxconn=511
+    ports:
+      - "6379:6379"
+    # networks:
+    #   node_net:
+    #     ipv4_address: 172.28.1.3
   # adminer:
   #   image: adminer
   #   restart: always
