--- a/admin-bff/docker-compose.yml
+++ b/admin-bff/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    # restart: always
     ports:
         - 3306:3306
     environment:
