--- a/new_micro/docker-compose.yml
+++ b/new_micro/docker-compose.yml
@@ -2,10 +2,21 @@
 version: '3.1'
 
 services:
-  db:
+  mongodb:
+    image: "mongo"
+    container_name: "mongodb-container"
+    environment:
+      - MONGO_INITDB_DATABASE=test
+      - MONGO_INITDB_ROOT_USERNAME=mongo
+      - MONGO_INITDB_ROOT_PASSWORD=mongo
+    volumes:
+      - $HOME/volumes/mongodb:/data/db
+    ports:
+      - 27017:27017
+  mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    # restart: always
     ports:
         - 3306:3306
     environment:
