--- a/new_micro/docker-compose.yml
+++ b/new_micro/docker-compose.yml
@@ -24,13 +24,24 @@ services:
     volumes:
       - $HOME/volumes/mysql_data:/var/lib/mysql
       - $HOME/volumes/mysql/my.cnf:/etc/mysq/my.cnf
+  # db:
+  #   image: mysql
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   restart: always
+  #   ports:
+  #       - 3306:3306
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #   volumes:
+  #     - $HOME/volumes/mysql_data:/var/lib/mysql
+  #     - $HOME/volumes/mysql/my.cnf:/etc/mysq/my.cnf
   redis:
     image: "redis:alpine"
     environment:
       - REDIS_REPLICATION_MODE=master
     volumes:
-    - $HOME/volumes/redis/redis.conf:/usr/local/etc/redis/redis.conf
-    - $HOME/volumes/redis/data:/data
+      - $HOME/volumes/redis/redis.conf:/usr/local/etc/redis/redis.conf
+      - $HOME/volumes/redis/data:/data
     sysctls:
       - net.core.somaxconn=511
     ports:
@@ -38,8 +49,8 @@ services:
     # networks:
     #   node_net:
     #     ipv4_address: 172.28.1.3
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
+    # adminer:
+    #   image: adminer
+    #   restart: always
+    #   ports:
+    #     - 8080:8080
